--- a/src/positioning.css
+++ b/src/positioning.css
@@ -284,6 +284,10 @@
   padding-left: 2%;
 }
 
+.padding-left-5 {
+  padding-left: 5%;
+}
+
 .padding-right-2 {
   padding-right: 2%;
 }
@@ -294,6 +298,14 @@
 
 .padding-bottom-4 {
   padding-bottom: 4%;
+}
+
+.padding-bottom-5 {
+  padding-bottom: 5%;
+}
+
+.padding-top-2 {
+  padding-top: 2%;
 }
 
 .b-s-border-box {
